--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -5,7 +5,7 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.8/phpunit.xsd"
          backupGlobals="false"
          colors="true"
-         bootstrap="autoload.php"
+         bootstrap="bootstrap_test.php"
 >
     <php>
         <ini name="error_reporting" value="-1" />
