--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,13 @@ build:
     environment:
         php:
             version: 7.0.8
+    tests:
+        override:
+            -
+                command: 'bin/phpunit -c app --coverage-clover=clover.xml'
+                coverage:
+                    file: 'clover.xml'
+                    format: 'php-clover'
 checks:
     php:
         code_rating: true
