--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "doctrine/doctrine-migrations-bundle": "^1.0"
+        "doctrine/doctrine-migrations-bundle": "^1.0",
+        "javiereguiluz/easyadmin-bundle": "^1.14"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
