[config] User エンティティを EasyAdminBundle で管理できるように設定

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,3 +76,8 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
+
+# EasyAdmin Configuration
+easy_admin:
+    entities:
+        - AppBundle\Entity\User
