--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "sensio/generator-bundle": "~3.0",
         "symfony/phpunit-bridge": "~2.7",
         "phpunit/phpunit": "^4.8",
-        "piece/stagehand-testrunner": "^4.2"
+        "piece/stagehand-testrunner": "^4.2",
+        "hautelook/alice-bundle": "^1.3",
+        "doctrine/data-fixtures": "^1.2"
     },
     "scripts": {
         "post-install-cmd": [
