--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -32,3 +32,7 @@ monolog:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+
+hautelook_alice:
+    db_drivers:
+        orm: ~          # Enable Doctrine ORM if is registered
