--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,9 @@ build:
     environment:
         php:
             version: 7.0.8
+    dependencies:
+         before:
+            - mysql -e "CREATE DATABASE symfony"
     tests:
         override:
             -
