[config] EasyAdmin の対象エンティティに Game を追加

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,3 +83,4 @@ easy_admin:
         - AppBundle\Entity\User
         - AppBundle\Entity\Team
         - AppBundle\Entity\Player
+        - AppBundle\Entity\Game
