--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,11 @@ fos_user:
 
 # EasyAdmin Configuration
 easy_admin:
+    site_name: 'admin'
+    formats:
+        date:     'Y/m/d'
+        time:     'H:i'
+        datetime: 'Y/m/d H:i:s'
     entities:
         - AppBundle\Entity\User
         - AppBundle\Entity\Team
