[config] FOSRestBundle の view_response_listener を force に設定

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,3 +77,6 @@ fos_user:
     firewall_name: main
     user_class: AppBundle\Entity\User
 
+fos_rest:
+    view:
+       view_response_listener: force
