[config] Player を取得する REST API のルーティングを追加

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,7 @@ app:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+api_player:
+    resource: "@AppBundle/Controller/PlayerController.php"
+    type: rest
