--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,6 +5,12 @@ app:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+fos_oauth_server_token:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+
+fos_oauth_server_authorize:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
+
 api_player:
     resource: "@AppBundle/Controller/PlayerController.php"
     type: rest
