--- a/src/AppBundle/DataFixtures/ORM/dev.yml
+++ b/src/AppBundle/DataFixtures/ORM/dev.yml
@@ -117,3 +117,10 @@ AppBundle\Entity\Team:
 AppBundle\Entity\League:
     league_1:
         name: IT LEAGUE
+
+AppBundle\Entity\Client:
+    sample:
+        randomId: 3bcbxd9e24g0gk4swg0kwgcwg4o8k8g4g888kwc44gcc0gwwk4
+        redirectUris: []
+        secret: 4ok2x70rlfokc8g0wws8c8kwcokw80k44sg48goc0ok4w0so0k
+        allowedGrantTypes: [ password ]
